WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
195953
Fix GraphicsLayer-related crashes after
r243129
https://bugs.webkit.org/show_bug.cgi?id=195953
Summary
Fix GraphicsLayer-related crashes after r243129
Simon Fraser (smfr)
Reported
2019-03-19 10:22:48 PDT
Fix GraphicsLayer-related crashes after
r243129
Attachments
Patch
(3.64 KB, patch)
2019-03-19 10:24 PDT
,
Simon Fraser (smfr)
dino
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2019-03-19 10:24:56 PDT
Created
attachment 365178
[details]
Patch
Simon Fraser (smfr)
Comment 2
2019-03-19 10:40:39 PDT
https://trac.webkit.org/changeset/243146/webkit
Radar WebKit Bug Importer
Comment 3
2019-03-19 11:03:06 PDT
<
rdar://problem/49025949
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug