Fix GraphicsLayer-related crashes after r243129 https://bugs.webkit.org/show_bug.cgi?id=195953

Reviewed by Dean Jackson.

Extending the lifetime of GraphicsLayers by referencing them in the scrolling tree (r243129)
revealed a bug where RenderLayerCompositor was failing to clear itself as the client of
GraphicsLayers that it owned, causing crashes.

Fix by using the GraphicsLayer::unparentAndClear() helper to clean up all the GraphicsLayers
owned by RenderLayerCompositor.

* rendering/RenderLayerCompositor.cpp:
(WebCore::RenderLayerCompositor::~RenderLayerCompositor):
* rendering/RenderLayerCompositor.h:

Canonical link: https://commits.webkit.org/210215@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@243146 268f45cc-cd09-0410-ab3c-d52691b4dbfc